--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ChecklistManagerContext": "Server=(localdb)\\mssqllocaldb;Database=ChecklistManagerContext-705a24db-8ef7-473e-8e75-ee25e27032e3;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"ChecklistManagerContext": "Server=(localdb)\\mssqllocaldb;Database=ChecklistManagerContext-705a24db-8ef7-473e-8e75-ee25e27032e3;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ChecklistManagerContext": "Server=(localdb)\\MSSQLLocalDB;Database=ChecklistManagerDb;Trusted_Connection=True"
   }
 }
