--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -5,8 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
+  //Veritabanı Bağlantısı Gerekli
+  "AllowedHosts": ""
   "ConnectionStrings": {
-    "ChecklistManagerContext": "Server=(localdb)\\MSSQLLocalDB;Database=ChecklistManagerDb;Trusted_Connection=True"
+    "ChecklistManagerContext": ""
   }
 }
